<resources>
    <string name="app_name">BusinessAssistant3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Contraseña (6dig min)</string>
    <string name="iniciar_sesion">SIGN IN</string>
    <string name="registrarse">SIGN UP</string>

    <string name="digitar_nombre">Nombre</string>
    <string name="digitar_correo">Correo electronico</string>
    <string name="digitar_contrasena">Contraseña</string>
    <string name="digitar_rcontrasena">Vuelva a digitar la contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>

    <string name="registrar">Guardar</string>
    <string name="text_resultado">Resultado</string>
    <string name="tv_fecha">"Fecha de nacimiento:"</string>
    <string name="hint_fecha">dd/mm/yy</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="correo_texto">Tu correo es:</string>
    <string name="registrate">Registro</string>
    <string name="title_activity_nav">ActivityNAV</string>
    <string name="agregar_cliente">AGREGAR</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="direccion_cliente">Direccion del Cliente</string>
    <string name="celular_cliente">Ingrese celular</string>
    <string name="clientes">Clientes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="nombre_usuario">Nombre del Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="identificacion">Número de Identificación</string>
    <string name="correo">Correo Electronico</string>
    <string name="celular">Celular</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>


</resources>