<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/usuarioFragment">

    <fragment
        android:id="@+id/clientesFragment"
        android:name="com.teo.businessassistant3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.teo.businessassistant3.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.teo.businessassistant3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/usuarioFragment"
        android:name="com.teo.businessassistant3.UsuarioFragment"
        android:label="fragment_usuario"
        tools:layout="@layout/fragment_usuario" />
</navigation>