<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsuarioFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gainsboro"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/business"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/mi_cuenta"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/usuario"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre_usuario"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre_usuario"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/apellidos"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellido_usuario"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/identificacion"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/identificacion_user"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/correo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correo"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/celular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/celular"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b_cerrar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/cerrar_sesion"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_cerrar"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>